--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^39.2.0",
     "mysql": "^2.18.1",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "xlsx": "^0.18.5"
   }
 }
